add primary auth
