# internal/entity/auth.go
@@ -1,0 +1,10 @@
+package entity
+
+type AuthRequest struct {
+	Login    string `json:"login" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
+type AuthResponse struct {
+	Token string `json:"token"`
+}
